[project]
name = "DontForgetAboutSafety"
version = "0.1.0"
description = "A project for fine-tuning a language model on word problems while mitigating catastrophic forgetting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "ipywidgets>=8.1.8",
    "peft>=0.18.1",
    "python-dotenv>=1.2.1",
    "transformers>=5.1.0",
    "trl>=0.28.0",
]
